// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

.c2 {
  margin-bottom: 0 !important;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a field with a description 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c7 {
  font-style: italic;
}

kbd.c7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c7 {
  font-weight: bold;
}

sub.c7,
sup.c7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c7,
u.c7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c7,
cite.c7,
var.c7,
em.c7 {
  font-style: italic;
}

kbd.c7,
pre.c7,
samp.c7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c7 .c11 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c6 {
  display: block;
  font-size: 0.8rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c9[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c9::-webkit-input-placeholder {
  opacity: 0.6;
}

.c9::-moz-placeholder {
  opacity: 0.6;
}

.c9:-ms-input-placeholder {
  opacity: 0.6;
}

.c9::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <span
    class="c6 c7 c0"
  >
    Required for your fannypack
  </span>
  <div
    class="c8 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c9 c10"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a field with a hint 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c11 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c9 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="username"
      type="text"
      value=""
    />
  </div>
  <span
    class="c9 c10 c0"
  >
    Must be awesome
  </span>
</div>
`;

exports[`renders correctly for a full width field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: inline-block;
}

.c4 {
  display: block;
}

.c3 {
  margin-bottom: 0 !important;
}

.c0 {
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c8 {
  width: 100%;
}

<div
  class="c0 c1"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c2 c1"
    style="align-items: center;"
  >
    <label
      class="c3 c4 c5 c6"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c7 c1"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c8 c9"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

.c2 {
  margin-bottom: 0 !important;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="false"
      aria-required="true"
      class="c7 c8"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an optional field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c7 {
  font-style: italic;
}

kbd.c7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c7 {
  font-weight: bold;
}

sub.c7,
sup.c7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c7,
u.c7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c7,
cite.c7,
var.c7,
em.c7 {
  font-style: italic;
}

kbd.c7,
pre.c7,
samp.c7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c7 .c11 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c6 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c9[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c9::-webkit-input-placeholder {
  opacity: 0.6;
}

.c9::-moz-placeholder {
  opacity: 0.6;
}

.c9:-ms-input-placeholder {
  opacity: 0.6;
}

.c9::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
    <span
      class="c6 c7 c0"
    >
      OPTIONAL
    </span>
  </div>
  <div />
  <div
    class="c8 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c9 c10"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input with state danger 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #c9444d !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c12 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c9 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  border-color: #d97c82;
  box-shadow: #d97c82 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="true"
      aria-required="false"
      class="c7 c8"
      id="username"
      type="text"
      value="Jake"
    />
  </div>
  <div />
  <span
    class="c9 c10 c11"
    color="danger"
  >
    This is an invalid name
  </span>
</div>
`;

exports[`states renders correctly for an input with state primary 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #444bc9 !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c12 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c9 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="username"
      type="text"
      value="Jake"
    />
  </div>
  <div />
  <span
    class="c9 c10 c11"
    color="primary"
  >
    This is an invalid name
  </span>
</div>
`;

exports[`states renders correctly for an input with state success 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #2c8453 !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c12 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c9 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  border-color: #6ba886;
  box-shadow: #6ba886 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="username"
      type="text"
      value="Jake"
    />
  </div>
  <div />
  <span
    class="c9 c10 c11"
    color="success"
  >
    This is an invalid name
  </span>
</div>
`;

exports[`states renders correctly for an input with state warning 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #f2a100 !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c12 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c9 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  border-color: #f5bd4c;
  box-shadow: #f5bd4c 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="username"
      type="text"
      value="Jake"
    />
  </div>
  <div />
  <span
    class="c9 c10 c11"
    color="warning"
  >
    This is an invalid name
  </span>
</div>
`;
